<resources>
    <string name="app_name">Know Your Government</string>
    <string name="separator">Separator</string>
    <string name="about">About</string>
    <string name="search">Search</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="_2020_martijn_koning">© 2020, Martijn Koning</string>
    <string name="google_civic_information_api"><a href="https://developers.google.com/civic-information/">Google Civic Information API</a></string>
    <string name="powered_by">Powered by</string>
    <string name="know_your_government">Know Your Government</string>
    <string name="no_locs">Location Unavailable</string>
    <string name="title_activity_official">OfficialActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="address">Address:</string>
    <string name="website">Website:</string>
    <string name="phone">Phone:</string>
    <string name="email">Email:</string>
    <string name="google_icon">Google+ Icon</string>
    <string name="youtube_icon">YouTube Icon</string>
    <string name="facebook_icon">Facebook Icon</string>
    <string name="twitter_icon">Twitter Icon</string>
    <string name="photo">Photo</string>
    <string name="democratic_party_logo">Democratic Party Logo</string>
    <string name="republican_party_logo">Republican Party Logo</string>
    <string name="no_loc_data">No Data For Location</string>
</resources>
